--- a/resources/application-connector/values.yaml
+++ b/resources/application-connector/values.yaml
@@ -71,6 +71,8 @@ global:
     version: "d6bbc47a"
   central_application_connectivity_validator:
     version: "PR-11173"
+  central_application_gateway:
+    version: "PR-11158"
 
 application_connectivity_certs_setup_job:
   secrets:
