--- a/resources/application-connector/values.yaml
+++ b/resources/application-connector/values.yaml
@@ -7,6 +7,9 @@ connection_token_handler:
 central_application_connectivity_validator:
   enabled: &centralApplicationConnectivityValidatorEnabled false
 
+central_application_gateway:
+  enabled: true
+
 global:
   centralApplicationConnectivityValidatorEnabled: *centralApplicationConnectivityValidatorEnabled
   disableLegacyConnectivity: false
