Migration to central application connectivity validator: application-operator should not provision separate connectivity validators if central application connecitivitiy validator is used

--- a/components/application-operator/charts/application/templates/role-binding.yaml
+++ b/components/application-operator/charts/application/templates/role-binding.yaml
@@ -102,6 +102,7 @@ roleRef:
   kind: ClusterRole
   name: {{ .Release.Name }}-application-gateway
 {{- end }}
+{{- if not .Values.global.centralApplicationConnectivityValidatorEnabled }}
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -205,3 +206,4 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: {{ .Release.Name }}-connectivity-validator
+{{- end }}
